# Caldron

./: .env.example  .gitignore  CHARTER.md  README.md  mods_list.pkl  mydatabase.db  pyproject.toml  pyvenv.cfg  recipe_graph.pkl  recipe_pot.pkl  scratch1.py  setup.py
SAM_baking/: SAMtest.py
api/: chain_factory.py  server.py  session.py  ws_protocol.py
caldron-app/: agent_defs.py  agent_tools.py  cauldron_app.py  class_defs.py  food_validator.py  langchain_util.py  logging_util.py  main.py  recipe_pot.pkl  sp_util.py  sql_util.py  util.py
cauldron-app/: README.md  agent_defs.py  agent_tools.py  cauldron_app.py  cauldron_test.py  class_defs.py  config.py  custom_print.py  fd:1  food_validator.py  functional_demo.py  langchain_util.py  logging_util.py  main.py  ml_service.py  mod_list_tests.py  mods_list.py  my_langchain_tools.py  neopixel_util.py  print_testing.py  pydantic_util.py  recipe_graph.pkl  recipe_graph.py  recipe_pot.pkl  recipe_print_demo.py  recipe_scraper_tools.py  requirements-dev.txt  requirements-voice.txt  requirements.txt  rpi_app_request.py  scratch.py  speech_test.py  speech_util.py  sql_util.py  thermal_printer_util.py  twilio_util.py  util.py  voice_test.py
data/: banana-bread-combined-recipes-2024-02-26-2134.csv  banana-bread-combined-recipes-2024-02-27-1338.csv  banana-bread-combined-urls-2024-02-26-1654.csv  malformed-processed-ingredient-IDs.txt  processed-banana-bread-recipes-2024-02-27-1547.csv  recipes-2024-02-22-1551.csv  recipes-2024-02-22-1654.csv  recipes-2024-02-26-1534.csv  recipes-2024-02-27-1200.csv  urls-2024-02-20-1712.csv  (+5 more)
(+200 files in other folders)
